--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-droidmedia (0.20201221.0-1+gemian) unstable; urgency=medium
+droidmedia (0.20201221.0+gemian) unstable; urgency=medium
 
   * Branch for Gemian
 
